Update application and react web app